# nhpa-lls-solvers

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_test_matrices.cpp  main.cpp  results.ipynb  tests.cpp
include/: CGSColumnOrthogonalizer.h  CGSFactorizer.h  CGSSolver.h  ColumnOrthogonalizer.h  FileHandler.h  GivensFactorizer.h  GivensSolver.h  HouseholderFactorizer.h  HouseholderSolver.h  LLSSolver.h  LSSSolver.h  MGSColumnOrthogonalizer.h  MGSFactorizer.h  MGSSolver.h  Matrix.h  QRFactorizer.h
src/: CGSColumnOrthogonalizer.cpp  CGSFactorizer.cpp  CGSSolver.cpp  FileHandler.cpp  GivensFactorizer.cpp  GivensSolver.cpp  HouseholderFactorizer.cpp  HouseholderSolver.cpp  MGSColumnOrthogonalizer.cpp  MGSFactorizer.cpp  MGSSolver.cpp  Matrix.cpp
tests/: ColumnOrthogonalizerTests.cpp
